applications/openlookeng-etherpad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-etherpad
  name: openlookeng-etherpad
