applications/openlookeng-etherpad/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: etherpad-ingress
spec:
  tls:
    - hosts:
        - etherpad.openlookeng.io
      secretName: etherpad-openlookeng-tls
  rules:
    - host: etherpad.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: etherpad-internal
              servicePort: 80
            path: /
